# goticker-solana-contracts

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_FROM_GITHUB.md  README.md  deploy-from-github.ps1  package.json
.github/workflows/: build-solana.yml
programs/goticker/: Cargo.toml
programs/goticker/src/: lib.rs
programs/ticker-economy/: Cargo.toml
programs/ticker-economy/src/: lib.rs
