[package]
name = "goticker"
version = "0.1.0"
description = "GoTicker - Decentralized Ticker Symbol Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goticker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0" 