[package]
name = "ticker-economy"
version = "0.1.0"
description = "Ticker Economy - Subscription and Payment System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticker_economy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0" 